# Velocity

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.githooks/: pre-commit
.github/workflows/: release.yml
scripts/: build-clean.mjs  discord-presence-harness.mjs  memory-stress-harness.mjs  migrate-public-releases.mjs  rebuild-release-history.sh  reorder-ico-frames.mjs  tauri.js  verify-bundled-installer.mjs  verify-release-assets.mjs
scripts/perf-harness/: Cargo.toml
scripts/perf-harness/src/: main.rs
src/: App.tsx  accent-context.tsx  api.ts  collection.tsx  icons.tsx  index.css  leading-silence.ts  lyrics.test.ts  lyrics.ts  main.tsx  memory-stress.test.ts  normalization.ts  player.tsx  playlists.tsx  settings.ts  storage.ts  taste-profile.test.ts  taste-profile.ts  types.ts  updater.ts  wrapped-icons.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: data_store.rs  discord_cover_publish.rs  discord_presence.rs  lyrics.rs  main.rs  text_utils.rs  window_drag.rs
src/components/: AlbumContextMenu.tsx  ArtistPage.tsx  CollectionPage.tsx  ContextMenu.tsx  CoverImageCropper.tsx  EntityPage.tsx  HomePage.tsx  LyricsPage.tsx  Marquee.tsx  NestedSubMenuPanel.tsx  PagesShared.tsx  PlayerBar.tsx  PlayerButtonIcons.tsx  PlaylistContextMenu.tsx  QueuePanel.tsx  SaveButton.tsx  SavingPanel.tsx  SearchFilters.tsx  SearchPage.tsx  SettingsPage.tsx  Shared.tsx  Sidebar.tsx  SongContextMenu.tsx  TrackList.tsx  UserPlaylistPage.tsx  UserPlaylistsPage.tsx  VirtualList.tsx
src/discord-presence/: deep-scenarios.test.ts  fuzz.test.ts  invariants.ts  ipc-simulator.ts  payload.ts  scenario-runner.ts  simulator.ts  startup-lifecycle.test.ts  sync-engine.test.ts  sync-engine.ts  sync-generation.test.ts  sync-queue.test.ts  sync-queue.ts
src/hooks/: useCollectionMetadataBackfill.ts  useCollectionSelectors.ts  useContextTrackTarget.ts  useDeviceExport.ts  useDiscordRichPresence.ts  useGlobalContextMenus.ts  useGlobalShortcuts.ts  useHorizontalDragScroll.ts  useIdle.ts  useImportedTracksHydration.ts  usePlayerSelectors.ts  useScrollRestoration.ts  useStartupMinimized.ts  useStartupSplash.ts  useTasteProfileTracking.ts  useTrackMetadataBackfill.ts  useViewportHeightTracker.ts
src/store/: collectionStore.ts  playerTransportStore.ts  playerUiStore.ts
src/utils/: artist-links.ts  artwork-color.ts  artwork-preload.ts  autoplayResolver.ts  bounded-lru.ts  external-import.ts  home-recommendations.ts  invoke-error.ts  listen-accumulator.test.ts  listen-accumulator.ts  media.test.ts  media.ts  navigation.ts  playback-history-snapshot.test.ts  playback-history-snapshot.ts  queue-visited.test.ts  queue-visited.ts  saved-collection-match.ts  search.test.ts  search.ts  song-resolution.test.ts  (+5 more)
