[package]
name = "velocity"
version = "0.1.4"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
discord-rich-presence = "1.1.0"
once_cell = "1.21.3"

base64 = "0.22"
flate2 = "1"
hex = "0.4"
lofty = "0.22.2"
md-5 = "0.10"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-prevent-default = { version = "5", features = ["platform-windows"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1.48.0", features = ["fs", "macros", "process", "sync", "time"] }
urlencoding = "2.1"
zip = "2.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_UI_Controls",
  "Win32_UI_HiDpi",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
tempfile = "3"
