[package]
name = "velocity-perf-harness"
version = "0.0.1"
edition = "2021"
publish = false

# Long-horizon simulation harness for velocity. Models the data-store
# write path the Rust backend exposes (`write_user_data` /
# `delete_user_data` / `load_all_user_data` in main.rs), simulated
# crawl/search/settings pressure, and the in-process HTTP response
# caches (stream / watch_playlist / track_duration). Goals:
#   * Quantify write amplification under realistic Velocity workload
#     patterns (settings toggles, search sessions, scroll-position
#     snapshots, EQ-slider drags, recent-searches).
#   * Quantify cache resident-memory growth across simulated days.
#
# Two simulator modes are exposed so the meta-sketched optimizations
# can be measured against the actual workload we expect in production:
#
#   --mode=baseline     Synchronous read-modify-save per write (the
#                       current implementation in src-tauri/src/data_store.rs).
#   --mode=optimized    In-memory mirror + coalesced debounced flush,
#                       with a fixed-cost shutdown drain.
#
# Both modes run the exact same workload stream; the diff in the
# reported numbers is the dollar cost of the optimization.

[dependencies]
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rand = "0.8"
once_cell = "1.21"
